Fixed activity error

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,8 @@
         android:autofillHints="@string/hintEmail"
         android:ems="10"
         android:hint="@string/hintEmail"
-        android:hintTextColor="#757575"
         android:inputType="textEmailAddress"
-        android:textColorHint="FF515050"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +34,7 @@
         android:hint="@string/hintName"
         android:inputType="textPersonName"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColorHint="#515050"
+        android:textColorHint="@color/design_default_color_on_secondary"
         app:layout_constraintBottom_toTopOf="@+id/txtEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -53,7 +52,7 @@
         android:ems="10"
         android:hint="@string/hintPassword"
         android:inputType="textPassword"
-        android:textColorHint="FF515050"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +68,7 @@
         android:ems="10"
         android:hint="@string/hintPasswordConfirm"
         android:inputType="textPassword"
-        android:textColorHint="FF515050"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
